# clingcon-theory-rs

./: Cargo.toml
.github/workflows/: ci-tests.yml
clingcon-plugin/: Cargo.toml
clingcon-plugin/src/: lib.rs
clingcon-sys/: Cargo.toml  README.md  bindings.rs  build.rs
