[package]
name = "clingcon-plugin"
version = "0.1.0"
authors = ["Sven Thiele <sthiel78@gmail.com>"]
description = "A clingo theory plugin for constraints over integers."
edition = "2018"
license = "MIT"
repository = "https://github.com/potassco/clingcon-theory-sys"
# documentation = "https://docs.rs/clingcon-plugin"

[dependencies]
clingo = { version = "0.7.0-beta.1", git = "https://github.com/potassco/clingo-rs", branch = "st/ast" }
clingo-sys = { git = "https://github.com/potassco/clingo-sys", branch="st/wip" }
clingcon-sys = { path = "../clingcon-sys"}

[lib]
crate-type = ["cdylib", "rlib"] 
