[package]
name = "clingcon-sys"
version = "0.6.2"
authors = ["sthiele <sthiele78@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to the C API of the clingcon library"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "clingcon"
license = "MIT"
repository = "https://github.com/potassco/clingcon-sys"
# documentation = "https://docs.rs/clingcon-sys"
readme = "README.md"

# [features]
# static-linking = []

[lib]
name = "clingcon_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"
clingo-sys = { git = "https://github.com/potassco/clingo-sys", branch="st/wip" }

[build-dependencies]
cmake = "0.1"
bindgen = "0.57"
