[package]
name = "clingcon-sys"
version = "0.0.0"
authors = ["sthiele <sthiele78@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to the C API of the clingcon library"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "clingcon"
license = "MIT"
repository = "https://github.com/potassco/clingcon-sys"
# documentation = "https://docs.rs/clingcon-sys"
readme = "README.md"

[lib]
name = "clingcon_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"
clingo-sys = "=0.7.2"

# [build-dependencies]
# bindgen = "0.68"
